<resources>
    <string name="app_name">Pico Ride</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_text">Register</string>
    <string name="register_button">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="book_your_car">Book Your Car</string>
    <string name="car_model">Car Model</string>
    <string name="location">Location</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remove_car">Remove Car</string>
    <string name="add_car">Add Car</string>
    <string name="modify_car">Modify Car</string>
    <string name="title_activity_booking">Booking</string>

</resources>
