<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7212020"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="com.example.android.loginpage.CarBooking">

    <TextView
        android:id="@+id/bookCarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/book_your_car"
        android:layout_gravity="center_horizontal"
        android:textColor="#579f6c"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/carModelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/car_model"
            android:textColor="#ffffff"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/location"
            android:textColor="#ffffff"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/driverNeededTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Driver"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/bookingDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Booking Date"
            android:textColor="#ffffff"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/returnDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Return Date"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

        <!--<TextView
            android:id="@+id/licnoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="License No.:"
            android:textColor="#ffffff"
            android:textSize="24sp"/>-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:textColor="#000"
            android:background="@drawable/book_edittext"
            android:backgroundTint="#ffffff"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/locationSpinner"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/book_edittext"
            android:backgroundTint="#ffffff"
            android:padding="5dp"
            android:textColor="#000"
            android:textColorLink="@android:color/background_light"
            android:textSize="24sp"
            android:maxLines="1"/>



            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Yes"
                    android:textSize="26sp"
                    android:textColor="#ffffff"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="30dp"
                    android:text="No"
                    android:textColor="#ffffff"
                    android:textSize="26sp"
                    android:onClick="onRadioButtonClicked"/>
        </LinearLayout>
            </RadioGroup>






        <EditText
            android:id="@+id/bookingDateEditText"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButton"
            android:layout_marginTop="23dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:hint="DD/MM/YYYY"
            android:background="@drawable/book_edittext"
            android:backgroundTint="#ffffff"
            android:textColorLink="@android:color/background_light"
            android:textSize="22sp"
            android:maxLines="1"/>



        <EditText
            android:id="@+id/returnDateEditText"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="DD/MM/YYYY"
            android:textColorLink="@android:color/background_light"
            android:textSize="22sp"
            android:background="@drawable/book_edittext"
            android:backgroundTint="#ffffff"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:maxLines="1"/>

        <!--<EditText
            android:id="@+id/licnoEditText"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColorLink="@android:color/background_light"
            android:textSize="22sp"
            android:background="@drawable/book_edittext"
            android:backgroundTint="#ffffff"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:maxLines="1"/>-->

    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:text="NEXT"
        android:textSize="20sp"
        android:background="#5bc150"/>



</LinearLayout>
